Google Search Console

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+
+    <meta name="google-site-verification" content="aexITLS38FdIRzwj25OVWxm87rpa9l-UV0URTyC9cTs" />
   </head>
   <body>
     {{ content }}
