--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,7 @@
   <body>
     {{ content }}
 
+    <script src="{{ site.url }}/assets/main.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
