Switch to Raleway

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import "http://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Rock Salt";
+@import "http://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Raleway";
 @import "http://cdn.rawgit.com/necolas/normalize.css/master/normalize.css";
 @import "http://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css";
 
@@ -31,7 +31,7 @@ body {
   color: white;
   position: relative;
   h1 {
-    font-family: "Rock Salt";
+    font-family: "Raleway";
     font-size: 48px;
     margin-bottom: 1em;
   }
