--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,7 +42,7 @@ body {
   background-size: cover;
   background-color: #333;
   padding: 4em 0 0 4em;
-  @media(max-width: 400px) {
+  @media(max-width: 600px) {
     padding: 1em 1em 2em 1em;
     background-position-x: -40vh;
     display: flex;
@@ -129,4 +129,22 @@ body {
 
 #contact {
   margin-bottom: 10em;
+}
+
+.youtube-container {
+  position: relative;
+  width: 100%;
+  margin: 5% 0;
+  padding-bottom: 47%;
+  padding-top: 30px;
+}
+
+.youtube-container iframe,
+.youtube-container object,
+.youtube-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
