--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,8 +1,8 @@
 ---
 ---
-@import "http://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Raleway";
-@import "http://cdn.rawgit.com/necolas/normalize.css/master/normalize.css";
-@import "http://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css";
+@import "https://www.amazon.fr://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Raleway";
+@import "https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css";
+@import "https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css";
 
 a, a:hover {
   color: #1f6fd8;
