--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import "https://www.amazon.fr://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Raleway";
+@import "https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic|Raleway";
 @import "https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css";
 @import "https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css";
 
